--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,16 +40,27 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
+            <span class="icon-bar icon-white"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
           <%= link_to "Rembud", root_path, class: 'brand' %>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to Client.model_name.human(count:1.1), clients_path  %></li>
+              <li><%= link_to Document.model_name.human(count:1.1), documents_path  %></li>
+              <li class="divider-vertical"></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <%= Resource.model_name.human(count:1.1) %>
+                  <b class="caret"></b>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to Material.model_name.human(count:1.1), materials_path  %></li>
+                    <li><%= link_to Supplier.model_name.human(count:1.1), suppliers_path  %></li>
+                    <li><%= link_to Vehicle.model_name.human(count:1.1), vehicles_path  %></li>
+                  </ul>
+                </a>
+              </li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
