--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Resource -%>
+<%- model_class = Material -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human(count: 1.1) %></h1>
 </div>
@@ -6,30 +6,24 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:code) %></th>
-      <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%= model_class.human_attribute_name(:resoursable_id) %></th>
-      <th><%= model_class.human_attribute_name(:resoursable_type) %></th>
+      <th><%= Resource.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:measurement) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @resources.each do |resource| %>
+    <% @materials.each do |material| %>
       <tr>
-        <td><%= link_to resource.id, resource_path(resource) %></td>
-        <td><%= resource.name %></td>
-        <td><%= resource.code %></td>
-        <td><%= resource.price %></td>
-        <td><%= resource.resoursable_id %></td>
-        <td><%= resource.resoursable_type %></td>
-        <td><%=l resource.created_at %></td>
+        <td><%= link_to material.id, material_path(material) %></td>
+        <td><%= material.resource.name %></td>
+        <td><%= material.measurement %></td>
+        <td><%=l material.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_resource_path(resource), :class => 'btn btn-mini' %>
+                      edit_material_path(material), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      resource_path(resource),
+                      material_path(material),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -40,5 +34,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_resource_path,
+            new_material_path,
             :class => 'btn btn-primary' %>
