--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,32 +1,25 @@
-<%- model_class = Order -%>
+<%- model_class = Vehicle -%>
 <div class="page-header">
-  <h1>
-    <%=t '.title', :default => model_class.model_name.human %>
-    <%= link_to @client.name, client_path(@client) %>
-  </h1>
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:started_at) %></th>
-      <th><%= model_class.human_attribute_name(:stage) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @orders.each do |order| %>
+    <% @vehicles.each do |vehicle| %>
       <tr>
-        <td><%= link_to order.id, client_order_path(@client, order) %></td>
-        <td><%=l order.started_at %></td>
-        <td><%= order.stage %></td>
-        <td><%=t 'time.ago', time: time_ago_in_words(order.created_at) %></td>
+        <td><%= link_to vehicle.id, vehicle_path(vehicle) %></td>
+        <td><%=l vehicle.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_client_order_path(@client, order), :class => 'btn btn-mini' %>
+                      edit_vehicle_path(vehicle), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      client_order_path(@client, order),
+                      vehicle_path(vehicle),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -37,5 +30,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_client_order_path(@client),
+            new_vehicle_path,
             :class => 'btn btn-primary' %>
