--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td><%= link_to supplier.id, supplier_path(supplier) %></td>
         <td><%= supplier.qualification %></td>
-        <td><%=l supplier.created_at %></td>
+        <td><%=time_ago_human supplier.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_supplier_path(supplier), :class => 'btn btn-mini' %>
