--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= document.name %></td>
         <td><%= document.code %></td>
         <td><%= document.template %></td>
-        <td><%=l document.created_at %></td>
+        <td><%=time_ago_human document.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_document_path(document), :class => 'btn btn-mini' %>
