--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -24,7 +24,7 @@
         <td><%= task.execution_time %></td>
         <td><%= task.priority %></td>
         <td><%= task.measurement %></td>
-        <td><%=l task.created_at %></td>
+        <td><%=time_ago_human task.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_task_path(task), :class => 'btn btn-mini' %>
