--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,37 +35,20 @@
     <%# favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar icon-white"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <%= link_to "Rembud", root_path, class: 'brand' %>
-          <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to Client.model_name.human(count:1.1), clients_path  %></li>
-              <li><%= link_to Document.model_name.human(count:1.1), documents_path  %></li>
-              <li class="divider-vertical"></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <%= Resource.model_name.human(count:1.1) %>
-                  <b class="caret"></b>
-                  <ul class="dropdown-menu">
-                    <li><%= link_to Material.model_name.human(count:1.1), materials_path  %></li>
-                    <li><%= link_to Supplier.model_name.human(count:1.1), suppliers_path  %></li>
-                    <li><%= link_to Vehicle.model_name.human(count:1.1), vehicles_path  %></li>
-                  </ul>
-                </a>
-              </li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    
+    <%= nav_bar fixed: :top, brand: "Rembud", responsive: true do %>
+      <%= menu_group do %>
+        <%= menu_item Client.model_name.human(count:1.1), clients_path %>
+        <%= menu_item Document.model_name.human(count:1.1), documents_path %>
+      
+        <%= drop_down Resource.model_name.human(count:1.1) do %>
+          <%= menu_item Material.model_name.human(count:1.1), materials_path %>
+          <%= menu_item Supplier.model_name.human(count:1.1), suppliers_path %>
+          <%= menu_item Vehicle.model_name.human(count:1.1), vehicles_path %>
+        <% end %>
+        
+      <% end %>
+    <% end %>
     
     <div id="wrap">
       <div class="container">
