add resource info to resource-based controllers

--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -4,12 +4,7 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= Resource.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @resource.name %></dd>
-  <dt><strong><%= Resource.human_attribute_name(:code) %>:</strong></dt>
-  <dd><%= @resource.code %></dd>
-  <dt><strong><%= Resource.human_attribute_name(:price) %>:</strong></dt>
-  <dd><%= number_to_currency @resource.price %></dd>
+  <%= render 'resoursable/show' %>
   <dt><strong><%= model_class.human_attribute_name(:measurement) %>:</strong></dt>
   <dd><%= @material.measurement %></dd>
 </dl>
