--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -4,6 +4,7 @@
 </div>
 
 <dl class="dl-horizontal">
+  <%= render 'resoursable/show' %>
   <dt><strong><%= model_class.human_attribute_name(:qualification) %>:</strong></dt>
   <dd><%= @supplier.qualification %></dd>
 </dl>
