--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -4,6 +4,8 @@
 </div>
 
 <dl class="dl-horizontal">
+  <%= render 'resoursable/show' %>
+  <dd><%= number_to_currency @resource.price %></dd>
 </dl>
 
 <div class="form-actions">
