--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= Resource.human_attribute_name(:name) %></th>
+      <%= render 'resoursable/index_thead' %>
       <th><%= model_class.human_attribute_name(:measurement) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -16,7 +16,7 @@
     <% @materials.each do |material| %>
       <tr>
         <td><%= link_to material.id, material_path(material) %></td>
-        <td><%= material.resource.name %></td>
+        <%= render partial: 'resoursable/index_tbody', object: material %>
         <td><%= material.measurement %></td>
         <td><%=time_ago_human material.created_at %></td>
         <td>
