--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
+      <%= render 'resoursable/index_thead' %>
       <th><%= model_class.human_attribute_name(:qualification) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -15,6 +16,7 @@
     <% @suppliers.each do |supplier| %>
       <tr>
         <td><%= link_to supplier.id, supplier_path(supplier) %></td>
+        <%= render partial: 'resoursable/index_tbody', object: supplier %>
         <td><%= supplier.qualification %></td>
         <td><%=time_ago_human supplier.created_at %></td>
         <td>
