--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @vehicle, :html => { :class => 'form-horizontal' } do |f| %>
 
   <div class="form-actions">
+    <%= render partial: 'resoursable/form', object: f %>
+    
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 vehicles_path, :class => 'btn' %>
