added github link to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 
     <div id="footer" class="footer">
       <div class="container">
-        <p class="muted credit">&copy; 2013 <%= t :knuba %>.</p>
+        <p class="muted credit">&copy; 2013 <%= t :knuba %>. <%= link_to 'Github', 'https://github.com/kawaiiMartius/rembud' %></p>
       </div>
     </div>
 
