install rspec, simple_form, factory_girl
Install RSpecm, simple_form, Factory_Girl,
Add few forms as simple form

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,26 +1,11 @@
-<%= form_for [@client, @order], :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :client_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.collection_select :client_id, Client.all, :id, :name, class: 'select' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :started_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.date_select :started_at, :class => 'date_select' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :stage, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :stage, :class => 'text_field' %>
-    </div>
-  </div>
+<%= simple_form_for [@client, @order], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :client_id, collection: Client.all, default: @client %>
+  <%= f.input :started_at %>
+  <%= f.input :stage %>
 
   <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                client_orders_path(@client), :class => 'btn' %>
+    <%= f.button :submit, class: 'btn-primary' %>
+    <%= link_to t("helpers.links.cancel"), client_orders_path, :class => 'btn' %>
   </div>
+  
 <% end %>
