--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Supplier -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human(count: 1.1) %></h1>
 </div>
 <table class="table table-striped">
   <thead>
