--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,37 +1,12 @@
-<%= form_for @task, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :name, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :name, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :price, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :price, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :execution_time, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :execution_time, :class => 'number_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :priority, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :priority, :class => 'number_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :measurement, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :measurement, :class => 'text_field' %>
-    </div>
-  </div>
+<%= simple_form_for @task, :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :name %>
+  <%= f.input :price %>
+  <%= f.input :execution_time %>
+  <%= f.input :priority %>
+  <%= f.input :measurement %>
 
   <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= f.button :submit %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 tasks_path, :class => 'btn' %>
   </div>
