--- a/app/views/resource_in_tasks/index.html.erb
+++ b/app/views/resource_in_tasks/index.html.erb
@@ -1,31 +1,31 @@
-<%- model_class = OrderTask -%>
+<%- model_class = ResourceInTask -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human(count: 1.1) %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= Order.model_name.human %></th>
       <th><%= Task.model_name.human %></th>
+      <th><%= Resource.model_name.human %></th>
       <th><%= model_class.human_attribute_name(:amount) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @order_tasks.each do |order_task| %>
+    <% @resource_in_tasks.each do |resource_in_task| %>
       <tr>
-        <td><%= link_to order_task.id, client_order_order_task_path(@client, @order, order_task) %></td>
-        <td>
-          <%= link_to order_task.order.started_at, client_order_path(@order.client.to_param, @order.to_param) %>
-        </td>
-        <td><%= link_to order_task.task.name, order_task.task %></td>
-        <td><%= order_task.amount %></td>
+        <td><%= link_to resource_in_task.id, task_resource_in_task_path(@task, resource_in_task) %></td>
+        <td><%= link_to resource_in_task.task.name, resource_in_task.task %></td>
+        <td><%= link_to resource_in_task.resource.name, resource_in_task.resource.resoursable %></td>
+        <td><%= resource_in_task.amount %></td>
+        <td><%=l resource_in_task.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_client_order_order_task_path(order_task.order.client.to_param, order_task.order.to_param, order_task.to_param), :class => 'btn btn-mini' %>
+                      edit_task_resource_in_task_path(@task, resource_in_task), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      client_order_order_task_path(order_task.order.client.to_param, order_task.order.to_param, order_task.to_param),
+                      task_resource_in_task_path(@task, resource_in_task),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -36,5 +36,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_client_order_order_task_path,
+            new_task_resource_in_task_path,
             :class => 'btn btn-primary' %>
