--- a/app/views/order_tasks/show.html.erb
+++ b/app/views/order_tasks/show.html.erb
@@ -4,12 +4,12 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:order_id) %>:</strong></dt>
-  <dd><%= @order_task.order_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:task_id) %>:</strong></dt>
-  <dd><%= @order_task.task_id %></dd>
+  <dt><strong><%= Order.model_name.human %>:</strong></dt>
+  <dd><%= link_to @order.started_at, client_order_path %></dd>
+  <dt><strong><%= Task.model_name.human %>:</strong></dt>
+  <dd><%= link_to @order_task.task.name, @order_task.task %></dd>
   <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
-  <dd><%= @order_task.amount %></dd>
+  <dd><%= @order_task.amount %> (<%= @order_task.task.measurement %>)</dd>
 </dl>
 
 <div class="form-actions">
