--- a/app/views/resource_in_tasks/index.html.erb
+++ b/app/views/resource_in_tasks/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = ResourceInTask -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human(count: 1.1).titleize %></h1>
 </div>
 <table class="table table-striped">
   <thead>
