--- a/app/views/resource_in_tasks/show.html.erb
+++ b/app/views/resource_in_tasks/show.html.erb
@@ -4,21 +4,21 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:task_id) %>:</strong></dt>
-  <dd><%= @resource_in_task.task_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:resource_id) %>:</strong></dt>
-  <dd><%= @resource_in_task.resource_id %></dd>
+  <dt><strong><%= Task.model_name.human %>:</strong></dt>
+  <dd><%= link_to @resource_in_task.task.name, @resource_in_task.task %></dd>
+  <dt><strong><%= Resource.model_name.human %>:</strong></dt>
+  <dd><%= link_to @resource_in_task.resource.name, @resource_in_task.resource.resoursable %></dd>
   <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
   <dd><%= @resource_in_task.amount %></dd>
 </dl>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              resource_in_tasks_path, :class => 'btn'  %>
+              task_resource_in_tasks_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_resource_in_task_path(@resource_in_task), :class => 'btn' %>
+              edit_task_resource_in_task_path(@task, @resource_in_task), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              resource_in_task_path(@resource_in_task),
+              task_resource_in_task_path(@task, @resource_in_task),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
