Add order's tasks completion tracking

--- a/app/views/order_tasks/_form.html.erb
+++ b/app/views/order_tasks/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.association :task, label_method: :name, prompt: t(:select_task, scope: [:messages, :prompts])  %>
     <%= f.input :amount %>
+    <%= f.input :is_complete %>
   </div>
 
   <div class="form-actions">
