--- a/app/views/order_tasks/show.html.erb
+++ b/app/views/order_tasks/show.html.erb
@@ -5,7 +5,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Order.model_name.human %>:</strong></dt>
-  <dd><%= link_to @order.started_at, client_order_path %></dd>
+  <dd><%= link_to @order.started_at, [@client, @order] %></dd>
   <dt><strong><%= Task.model_name.human %>:</strong></dt>
   <dd><%= link_to @order_task.task.name, @order_task.task %></dd>
   <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
