--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,6 +14,9 @@
   <dt><strong><%= model_class.human_attribute_name(:cost) %>:</strong></dt>
   <dd><%= number_to_currency @order.cost %></dd>
   
+  <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
+  <dd><%= number_to_currency @order.price %></dd>
+  
   <% unless @order.order_tasks.empty? %>
     <dt><strong><%= Task.model_name.human(count: 1.1) %>:</strong></dt>
     <dd>
