--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,14 +6,15 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @task.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
-  <dd><%= @task.price %></dd>
   <dt><strong><%= model_class.human_attribute_name(:execution_time) %>:</strong></dt>
   <dd><%= @task.execution_time %></dd>
   <dt><strong><%= model_class.human_attribute_name(:priority) %>:</strong></dt>
   <dd><%= @task.priority %></dd>
   <dt><strong><%= model_class.human_attribute_name(:measurement) %>:</strong></dt>
   <dd><%= @task.measurement %></dd>
+  
+  <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
+  <dd><%= number_to_currency @task.price %></dd>
   
   <dt><strong><%= model_class.human_attribute_name(:cost) %>:</strong></dt>
   <dd><%= number_to_currency @task.cost %></dd>
